--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^1.6.0",
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
